<resources>
    <string name="app_name" >优海猫PosVox-SD</string>
    <string name="qudan_null">取单(F3)</string>
    <string name="qudan_null1">取单</string>
    <string name="qudan_num">取单(F3)(%s)</string>
    <string name="usr">请输入账号</string>
    <string name="pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="clear">清空</string>
    <string name="delete">删除</string>
    <string name="barcode">条形码</string>
    <string name="grand_total">总价:</string>
    <string name="currency_setting">货币设置</string>
    <string name="qfrsp">请放入商品</string>
    <string name="zlyc">重量异常</string>
    <string name="zlbwd">重量不稳定</string>
    <string name="total_items">总件数:</string>
    <string name="item_discounts">折扣</string>







    <string name="delete_item">删除商品</string>
    <string name="clear_all">清空(F5)</string>
    <string name="hold_order">挂单(F2)</string>
    <string name="item_discount">单品打折(F4)</string>
    <string name="order_discount">整单打折(F6)</string>
    <string name="print_receipt">打印尾单(F7)</string>
    <string name="No">序号</string>
    <string name="product_name">品名</string>
    <string name="qty">数量</string>
    <string name="total">合计</string>
    <string name="action">操作</string>
    <string name="checkout">结账(F8)</string>
    <string name="checkout1">结账</string>
    <string name="member_nickname">会员昵称(F10)</string>
    <string name="all">全部</string>
    <string name="confirm">确认</string>
    <string name="no_barcode">无码收银</string>
    <string name="product_price">商品价格</string>
    <string name="cash">现金支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="yidongzhifu">移动支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="due">应收</string>
    <string name="discount">优惠金额</string>
    <string name="paid">已收</string>
    <string name="received">实际收</string>
    <string name="payment">收款</string>
    <string name="change">找零</string>
    <string name="enter_payment_amount">请输入您的收款金额</string>
    <string name="tips">提示</string>
    <string name="delete_shop">您确定删除该商品吗？</string>
    <string name="cancel">取消</string>
    <string name="discount1">折扣</string>
    <string name="enter_discount">请输入您的折扣(1–100)</string>
    <string name="order_time">挂单时间</string>
    <string name="order_amount">挂单金额</string>
    <string name="price">单价</string>
    <string name="stock_in">商品入库</string>
    <string name="product_barcode">商品条码</string>
    <string name="product">\u3000\u3000商品</string>
    <string name="stock_qty">库存数量</string>
    <string name="stock_in_now">立即入库</string>
    <string name="back">返回</string>
    <string name="order_list">订单列表</string>
    <string name="enter_order_no">请输入订单编号</string>
    <string name="order_date">订单日期</string>
    <string name="start_date">开始日期</string>
    <string name="end_date">结束日期</string>
    <string name="cashier">收银员</string>
    <string name="rrder_no">订单编号</string>
    <string name="order_time1">订单时间</string>
    <string name="purchased_goods">购物信息</string>
    <string name="payment_amount">支付金额</string>
    <string name="total1">总额</string>
    <string name="payment_info">支付信息</string>
    <string name="print_receipt1">打印账单</string>
    <string name="membership_query">会员查询</string>
    <string name="enter_phone_number">请输入手机号</string>
    <string name="search">搜索</string>
    <string name="name">名字:</string>
    <string name="phone_number">手机号:</string>
    <string name="more_features">更多功能</string>
    <string name="sync_data">同步数据</string>
    <string name="label_printing">标签打印</string>
    <string name="order_history">历史账单</string>
    <string name="log_out">退出登录</string>
    <string name="receipt_printer_setup">账单打印机</string>
    <string name="label_printer_setup">标签打印机</string>
    <string name="discount_toggle">打折开关\n(当前:%s)</string>
    <string name="payment_type">支付类型</string>
    <string name="transaction_id">流水号</string>
    <string name="printer_device_information">打印机信息</string>
    <string name="device_name">设备名称</string>
    <string name="vendor_id">厂商ID</string>
    <string name="product_id">设备ID</string>
    <string name="product_selection">商品选择</string>
    <string name="print">打印</string>
    <string name="sku">商品编码</string>
    <string name="selling_price">售价</string>
    <string name="market_price">原价</string>
    <string name="cost_price">成本价</string>
    <string name="print_quantity">打印数量设置</string>
    <string name="prints_per_item">每个商品打印次数</string>
    <string name="start_print">开始打印</string>
    <string name="enter_refund_password">输入退款密码</string>
    <string name="password">密码</string>
    <string name="please_enter_refund_password">请输入退款密码</string>
    <string name="pinming_bianma">品名/编码</string>
    <string name="product_category">商品分类</string>
    <string name="check_to_add">添加勾选</string>
    <string name="pending_payment">待支付：</string>
    <string name="check">查看</string>
    <string name="refund">退款</string>
    <string name="Refunded">已退款</string>
    <string name="selection">选择</string>
    <string name="give_away">赠送</string>
    <string name="cancel_give_away">取消赠送</string>
    <string name="please_select_product">请选择商品</string>
    <string name="product_stocked_successfully">商品入库成功</string>
    <string name="setup_completed">设置成功</string>
    <string name="discounts_hint">您确定%s打折功能吗?</string>
    <string name="off">关闭</string>
    <string name="on">打开</string>
    <string name="paying">支付中...</string>
    <string name="product_not_found_in_inventory">商品库中没有该商品</string>
    <string name="no_network_detected">请检查网络</string>
    <string name="Payment_succeeded">支付成功</string>
    <string name="No_transaction_ID_recorded">支付单号为空,支付失败</string>
    <string name="Payment_failed">支付失败</string>
    <string name="order_canceled">"订单已撤销，支付失败</string>
    <string name="loading_data">数据加载中...</string>
    <string name="Sync_completed">数据同步成功</string>
    <string name="fold">"x"</string>
    <string name="realtimekg">"实时重量(kg)"</string>

    <string name="netzero">"去皮/置零"</string>

    <string name="Tareweigth">"皮重:0.000"</string>

    <string name="shiftover">"交接班"</string>
    <string name="currencyset">"货币设置"</string>
    <string name="receiptstyle">"小票样式"</string>
    <string name="possetting">"POS设置"</string>
    <string name="noitem">"暂无商品"</string>
    <string name="waitproduct">"等待加入商品"</string>
    <string name="sycndatanow">"正在同步商品..."</string>
    <string name="lablediy">"标签样式"</string>
    <string name="subtitle">"副标题"</string>
    <string name="shiftovertime">"交班时间"</string>
    <string name="shouyinyuan">"收银员"</string>
    <string name="operation">"操作"</string>
    <string name="TotalDue">"应收总额"</string>

    <string name="membernumber">"会员号"</string>
    <string name="coupon">"优惠券"</string>

    <string name="select_start_date">"请选择开始日期"</string>

    <string name="next">"下一步"</string>


    <string name="realtimeeffect">"实时效果"</string>
    <string name="paperwidth">"纸张宽度"</string>
    <string name="receiptcontent">"打印元素"</string>
    <string name="toplogo">"顶部logo"</string>
    <string name="storename">"店铺名称"</string>
    <string name="phoneadress">"电话地址"</string>
    <string name="membershopinfo">"会员信息"</string>
    <string name="cashertime">"收银员/时间"</string>
    <string name="qrcode">"二维码"</string>
    <string name="notes">"备注信息"</string>
    <string name="footerlogo">"底部logo"</string>
    <string name="fontsize">"字体大小"</string>
    <string name="small">"小"</string>
    <string name="middle">"中"</string>
    <string name="large">"大"</string>
    <string name="testprint">"测试打印"</string>
    <string name="save">"保存设置"</string>

    <string name="itemname">"商品"</string>
    <string name="subtotal">"金额"</string>
    <string name="notessample">"此单据二维码为开具增值税普通发票\n的唯一凭证，请妥善保管。\n请保留此单据，作为退、换货凭证。"</string>


    <string name="membershipinfo">"会员信息：leoinny"</string>
    <string name="typetoserch">"拼音/首字母/名称"</string>

    <string name="changeamount">"找零"</string>
    <string name="alipayamount">"支付宝"</string>
    <string name="wechatamount">"微信支付"</string>
    <string name="membercardamount">"会员卡"</string>
    <string name="cashamount">"现金"</string>
    <string name="actualamount">"实际支付"</string>
    <string name="discountamount">"折扣"</string>





    <string name="Local_bill_upload_required">你有本地账单需上传</string>
    <string name="Enter_item_price">请输入商品价格</string>
    <string name="Please_input_in_correct_price_format">请输入正确格式的金额</string>
    <string name="Amount_must_0">收款金额必须大于0</string>
    <string name="Cannot_underpay">收款金额不能小于需要支付的金额</string>
    <string name="Cannot_overpay">收款金额不能大于需要支付的金额</string>
    <string name="Scan_to_pay">请使用扫码枪完成支付</string>
    <string name="Scan_payment_QR_code">请扫描对应的支付码</string>
    <string name="Cash_only">没有网络可用只能现金结账</string>
    <string name="WeChat_paid_already">微信已经支付过了</string>
    <string name="Alipay_paid_already">支付宝已经支付过了</string>
    <string name="Password_error">密码错误</string>
    <string name="Valid_discount_format_only">请输入正确格式的折扣</string>
    <string name="Quantity_in_stock">请输入库存数量</string>
    <string name="No_matching_bill_found">没有查询到对应账单</string>
    <string name="Valid_cellphone_number_required">请输入正确的手机号</string>
    <string name="Refunding">退款中...</string>
    <string name="Confirm_refund">您确定退款吗?</string>
    <string name="Refund_successful">退款成功</string>
    <string name="Refund_failed">退款失败</string>
    <string name="Confirm_this_device">您确定选择该设备吗？</string>
    <string name="Enter_valid_number">请输入正确的数字</string>
    <string name="dqxz">当前选择:</string>
    <string name="pwd1">请输入登录密码</string>
    <string name="Reprint">(重打)</string>
    <string name="add_pay">添加支付配置</string>
    <string name="shangpinkaiguan">商品点击开关\n(当前:%s)</string>
    <string name="shangpinkaiguan_hint">您确定%s商品点击吗?</string>
    <string name="Language">语言</string>
    <string name="language_settings">语言设置</string>
</resources>