<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/all_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="860dp"
        android:layout_height="wrap_content"
        android:background="@drawable/white_bg"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="24dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp">

            <TextView
                android:id="@+id/hint_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/more_features"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/guanbi_btn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/guanbi" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tongbushuju_btn"
                style="@style/MoreFeatureBtnStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/baseline_sync_24"
                android:drawablePadding="-22dp"
                android:text="@string/sync_data"
                android:textColor="@color/mr_red_000" />

            <TextView
                android:id="@+id/bianqiandaying_btn"
                style="@style/MoreFeatureBtnStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/outline_aod_tablet_24"
                android:drawablePadding="-22dp"
                android:text="@string/label_printing" />

            <TextView
                android:id="@+id/shangpinruku_btn"
                style="@style/MoreFeatureBtnStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/outline_add_ad_24"
                android:drawablePadding="-22dp"
                android:text="@string/stock_in" />

            <TextView
                android:id="@+id/lishizhangdan_btn"
                style="@style/MoreFeatureBtnStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/outline_browse_gallery_24"
                android:drawablePadding="-22dp"
                android:text="@string/order_history" />

            <TextView
                android:id="@+id/tuichudenglv_btn"
                style="@style/MoreFeatureBtnStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/outline_all_out_24"
                android:drawablePadding="-22dp"
                android:text="@string/log_out"
                android:textColor="@color/mr_red_000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/zhangdandayingji_btn"
                style="@style/MoreFeatureBtnStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/baseline_print_24"
                android:drawablePadding="-22dp"
                android:text="@string/receipt_printer_setup" />

            <TextView
                android:id="@+id/bianqiandayingji_btn"
                style="@style/MoreFeatureBtnStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/outline_adf_scanner_24"
                android:drawablePadding="-22dp"
                android:text="@string/label_printer_setup" />

            <TextView
                android:id="@+id/xiaopiaodiy_btn"
                style="@style/MoreFeatureBtnStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/outline_adf_scanner_24"
                android:drawablePadding="-22dp"
                android:text="小票样式设置" />

            <TextView
                android:id="@+id/dazhekaiguan_btn"
                style="@style/MoreFeatureBtnStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/outline_award_star_24"
                android:drawablePadding="-22dp"
                android:text="@string/discount_toggle" />

            <TextView
                android:id="@+id/shangpindianji_btn"
                style="@style/MoreFeatureBtnStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/outline_blur_off_24"
                android:drawablePadding="-22dp"
                android:text="@string/shangpinkaiguan" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>