<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="100dp"
    android:gravity="center">
    <LinearLayout
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/white_bg">
        <RelativeLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/hint_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:text="@string/purchased_goods"
                android:textStyle="bold"
                android:layout_centerInParent="true" />
            <ImageView
                android:id="@+id/guanbi_btn"
                android:layout_centerVertical="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/guanbi"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <LinearLayout
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="18dp"
                android:textColor="@color/text_gray"
                android:text="@string/product_name"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:textSize="18dp"
                android:textColor="@color/text_gray"
                android:text="@string/price"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textColor="@color/text_gray"
                android:text="@string/qty"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textColor="@color/text_gray"
                android:text="@string/discount"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textColor="@color/text_gray"
                android:text="@string/payment_amount"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textColor="@color/text_gray"
                android:text="@string/total1"
                android:gravity="center"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ebeef5" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shop_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:fadeScrollbars="false"
            android:gravity="center"
            android:scrollbarFadeDuration="0"
            android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb"
            android:scrollbars="vertical"
            android:visibility="visible" />


    </LinearLayout>
</LinearLayout>