<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="100dp"
    android:gravity="center">
    <LinearLayout
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/white_bg">
        <RelativeLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/hint_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:text="@string/printer_device_information"
                android:textStyle="bold"
                android:layout_centerInParent="true" />
            <ImageView
                android:id="@+id/guanbi_btn"
                android:layout_centerVertical="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/guanbi"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dqxz"
                android:textSize="25dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/dqxz_tv"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="25dp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:text="@string/device_name"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:text="@string/vendor_id"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:text="@string/product_id"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:text="@string/action"
                android:gravity="center"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ebeef5" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/print_device_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:fadeScrollbars="false"
            android:gravity="center"
            android:scrollbarFadeDuration="0"
            android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb"
            android:scrollbars="vertical"
            android:visibility="visible" />


    </LinearLayout>
</LinearLayout>