<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    
    <LinearLayout
        android:padding="20dp"
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/white_bg">
        <RelativeLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/hint_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:text="@string/membership_query"
                android:textStyle="bold"
                android:layout_centerInParent="true" />
            <ImageView
                android:id="@+id/guanbi_btn"
                android:layout_centerVertical="true"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/guanbi"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">
            <com.uhm.uhmcs.view.CustomInputTextView
                android:background="@drawable/rounded_border"
                android:id="@+id/phone_tv"
                android:hint="@string/enter_phone_number"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:text=""
                android:textColorHint="@color/mr_gray_80"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/sousuo_btn"
                android:background="@drawable/blue_bg1"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:text="@string/search"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/rounded_border"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/mingzi_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="@string/name"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/shoujihao_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="@string/phone_number"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <include layout="@layout/discount_keyboard"/>
    </LinearLayout>

</LinearLayout>