<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/all_view">
    
    <LinearLayout
        android:clickable="true"
        android:focusable="true"
        android:padding="20dp"
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/white_bg">
        <RelativeLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/hint_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:text="@string/item_discount"
                android:textStyle="bold"
                android:layout_centerInParent="true" />
            <ImageView
                android:id="@+id/guanbi_btn"
                android:layout_centerVertical="true"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/guanbi"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/gray_line">
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/discount1"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:gravity="center"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#FFD4D8E2"/>
            <TextView
                android:id="@+id/zhekou_tv"
                android:hint="@string/enter_discount"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/mr_gray_80"
                android:textSize="20dp"
                android:text=""
                android:textColorHint="@color/mr_gray_80"/>
        </LinearLayout>
        <include layout="@layout/discount_keyboard"/>
    </LinearLayout>

</LinearLayout>